--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Get code # dl code from repo
-          uses: actions/checkout # identifier; can specify version ex: actions/checkout@v2
+          uses: actions/checkout@v3
         - name: Install nodeJS
           uses: actions/setup-@node@v3
           with: 
