--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
         - name: Get code # dl code from repo
           uses: actions/checkout@v3
         - name: Install nodeJS
-          uses: actions/setup-@node@v3
+          uses: actions/setup-node@v3
           with: 
             node-version: '18'
         - name: Install dependencies
