renamed workflow, added second job

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,6 @@
 name: Deploy Project 
 # trigger events
-on: push
+on: [push, workflow_dispatch] # note 3. 
 jobs:
   test: # job # 1
     runs-on: ubuntu-latest
@@ -20,6 +20,8 @@ jobs:
     # IMPORTANT: every job gets its own runner
     # its own VM that's totally isolated from other machines and jobs 
     # Both jobs will run in parallel unless specified otherwise
+    # to run sequentially, use 'needs' keyword
+    # needs: test # deploy job will wait for test job to finish ; uncomment to enable
     runs-on: ubuntu-latest
     steps:
         - name: Get code # dl code from repo
